JBTM-2942 LRA fixes for JDK 9