@@ -20,7 +20,7 @@
     <packaging>pom</packaging>
 
     <properties>
-        <version.wildfly-swarm>2017.8.1</version.wildfly-swarm>
+        <version.wildfly-swarm>2018.5.0</version.wildfly-swarm>
         <version.wildfly.swarm.checkstyle>3</version.wildfly.swarm.checkstyle>
 
         <version.json.api>1.1</version.json.api>
@@ -36,8 +36,6 @@
         <version.narayana>${project.version}</version.narayana>
         <version.microprofile.lra>0.0.3.Final</version.microprofile.lra>
 
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <test.logs.to.file>false</test.logs.to.file>
@@ -108,6 +106,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
+		<version>${version.maven-failsafe-plugin}</version>
                 <configuration>
                     <redirectTestOutputToFile>${test.logs.to.file}</redirectTestOutputToFile>
                     <skipITs>${skipITs}</skipITs>
@@ -167,10 +166,30 @@
              <jdk>[1.9,)</jdk>
           </activation>
           <properties>
-             <!-- JBTM-2942 Disable the lra-tests running with the JDK9 -->
-             <skipITs>true</skipITs>
+             <skipITs>false</skipITs>
           </properties>
+          <build>
+            <plugins>
+              <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <executions>
+                  <execution>
+                    <id>default-compile</id>
+                    <configuration>
+                      <showDeprecation>false</showDeprecation>
+                      <compilerArgs>
+                        <arg>--add-modules</arg>
+                        <arg>java.xml.bind</arg>
+                      </compilerArgs>
+                    </configuration>
+                  </execution>
+                </executions>
+              </plugin>
+            </plugins>
+          </build>
       </profile>
+
       <profile>
           <id>release</id>
           <build>
